           seeded pseudo random points will need to be regenerated.
  - #5596, GH-749, Allow promoting column as an id
           in ST_AsGeoJson(record,..).
           Views and materialized views that use the ST_AsGeoJSON(record ..)
           will need rebuilding to upgrade to new signature
           (Jan Tojnar)
  - #5496, ST_Clip all variants replaced, will require
           rebuilding of materialized views that use them (Regina Obe)
  - #5659, ST_DFullyWithin behaviour has changed to
           be ST_Contains(ST_Buffer(A, R), B) (Paul Ramsey)
  - Remove the WFS_locks extra package. (Paul Ramsey)
  - #5747, GH-776, ST_Length: Return 0 for CurvePolygon (Dan Baston)
  - #5770, support for GEOS 3.13 and RelateNG. Most functionality
           remains the same, but new GEOS predicate implementation
           has a few small changes.
      - Boundary Node Rule relate matrices might be different when
        using the "multi-valent end point" rule.
      - Relate matrices for situations with invalid MultiPolygons
        with shared boundaries might be different. Run ST_MakeValid
        to get valid inputs to feed to the calculation.
      - Zero length LineStrings are treated as if they are the
        equivalent Point object.


* Deprecated signatures *

  - GH-761, ST_StraightSkeleton => CG_StraightSkeleton (Loïc Bartoletti)
  - GT-189, All SFCGAL functions now use the prefix CG_, with the old onesusing
            ST_ being deprecated. (Loïc Bartoletti)

* New Features *

  - Improvements in the 'postgis' script:
      - new command list-enabled
      - new command list-all
      - command upgrade upgrades all databases that need to be
      - command status reports status of all databases
    (Sandro Santilli)
  - #5742, expose version of PROJ at compile time (Sandro Santilli)
  - #5721, postgis_topology: Allow sharing sequences between different topologies (Lars Opsahl)
  - #5667, postgis_topology: TopoGeo_LoadGeometry (Sandro Santilli)